- fixing spacing on projects page - fixing footer colors - fixing author By: on some blog page

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -118,6 +118,10 @@ p.author {
   color: #fff;
 }
 
+p.author2 {
+  color: #3f5dff;
+}
+
 li.dropdownActive a {
     font-weight: bold;
 }
