--- a/css/main.css
+++ b/css/main.css
@@ -537,7 +537,7 @@ li > dl {
 }
 
 .c-footer ._nav ._nav-list ._nav-item.-active a {
-    color: #fff;
+    color: #3f5dff;
 }
 
 .legal {
